Prevent click delay on mobile for actionable

--- a/util.css
+++ b/util.css
@@ -346,6 +346,8 @@
 [role="button"],
 [aria-controls] {
     cursor: pointer;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
 }
 
 /**
